# cfs

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  go.mod  go.sum  main.cpp  message.proto  readme.md
.github/workflows/: build.yml  cmake-single-platform.yml  go.yml  rust.yml
DCMiddleWare/: DCMiddleWare  go.mod  message_middle_to_server.proto  middleWare.go  sample.txt
cmake/: FindFUSE3.cmake
config/: client1_public.pem  client1_rw.json  loopback.hqy.moe_fullchain.pem  middleware.json  server.json
dc-client/: CMakeLists.txt  message.proto
dc-middleware/: DCMiddleWare  go.mod  main.go  write_request_server.proto  write_request_user.proto
dc-middleware/proto/: write_request_server.pb.go  write_request_server.proto  write_request_server_grpc.pb.go
dc-router/: Cargo.toml  build.rs
dc-router/proto/: data_capsule.proto
dc-router/src/: client.rs  main.rs  router.rs  server.rs
key/: client1_private.pem  client2_private.pem  client2_public.pem  loopback.hqy.moe_privkey.pem  server_private.pem  server_public.pem
proto/: block.proto  data_capsule.proto  middleware.proto  router.proto
src/: client.rs  server.rs
src/client/: client.rs  main.rs
src/lib/: block_cache.rs  cache.rs  client.rs  crypto.go  crypto.rs  fs.rs  inode.rs  inode_cache.rs  journal.rs  lib.rs  middleware.go  middleware.rs  proto.rs  server.rs
src/middleware/: .gitignore  go.mod  main.go  middleware.rs
src/middleware/dummyServer/: main.go
src/middleware/middlewareCrypto/: middlewareCrypto.go
src/server/: main.rs
