[package]
name = "dcfs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/fs.rs"


[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
ring = "0.17"
fuser = "0.14"
clap = "4.4"
libc = "0.2"
data-encoding = "2.4"
futures = "0.3"
rsa = { version = "0.9", features = ["pem", "sha2"] }
duplicate = "1.0"
log = "0.4.20"
env_logger = "0.10.1"

[build-dependencies]
tonic-build = "0.10"