[package]
name = "cfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/fs.rs"

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
ring = "0.17"
fuser = "0.14"
clap = "4.4"
libc = "0.2"
data-encoding = "2.4"
futures = "0.3"
rsa = { version = "0.9", features = ["pem", "sha2"] }
duplicate = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
lru = "0.12"
config = "0.13"
serde = { version = "1.0.192", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"