[package]
name = "dc-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "dc-router"
path = "src/main.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#ring = "0.17"

[build-dependencies]
tonic-build = "0.10"